# resilience

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DESIGN.md  Makefile  README.md  TODO.md  format.sh  part.cc  resilience.cc  resilience.h  test.cc  test.sh
.github/workflows/: main.yml
examples/: CMakeLists.txt
examples/08_multiple_partitions/: CMakeLists.txt  multiple_partitions.cc
examples/circuit/: CMakeLists.txt  Makefile  circuit.cc  circuit.h  circuit_config.h  circuit_cpu.cc  circuit_init.cc  circuit_mapper.cc  circuit_mapper.h
experiment/: build_circuit.sh  build_cpp_circuit.sh  build_cpp_pennant.sh  build_pennant.sh  build_stencil.sh  frontier_env.sh  parse_replay.py  parse_resources.py  parse_results.py  perlmutter_env.sh  replay_circuit.sh  replay_pennant.sh  replay_stencil.sh  sbatch_circuit.sh  sbatch_cpp_circuit.sh  sbatch_cpp_pennant.sh  sbatch_pennant.sh  sbatch_stencil.sh  setup.sh
experiment/daint/: replay_cpp_pennant.sh  sbatch_circuit.sh  sbatch_pennant.sh
experiment/frontier/: env.sh  replay_pennant.sh  replay_stencil.sh  sbatch_circuit.sh  sbatch_cpp_circuit.sh  sbatch_cpp_pennant.sh  sbatch_pennant.sh  sbatch_stencil.sh
experiment/pennant.tests/leblanc_long1024x10000/: leblanc.pnt
experiment/pennant.tests/leblanc_long1024x20000/: leblanc.pnt
experiment/pennant.tests/leblanc_long1024x30/: leblanc.pnt
experiment/pennant.tests/leblanc_long128x1000/: leblanc.pnt
experiment/pennant.tests/leblanc_long128x10000/: leblanc.pnt
experiment/pennant.tests/leblanc_long128x20000/: leblanc.pnt
experiment/pennant.tests/leblanc_long128x30/: leblanc.pnt
experiment/pennant.tests/leblanc_long16x1000/: leblanc.pnt
experiment/pennant.tests/leblanc_long16x10000/: leblanc.pnt
experiment/pennant.tests/leblanc_long16x20000/: leblanc.pnt
experiment/pennant.tests/leblanc_long16x30/: leblanc.pnt
experiment/pennant.tests/leblanc_long1x10000/: leblanc.pnt
experiment/pennant.tests/leblanc_long1x20000/: leblanc.pnt
experiment/pennant.tests/leblanc_long1x30/: leblanc.pnt
experiment/pennant.tests/leblanc_long2048x10000/: leblanc.pnt
experiment/pennant.tests/leblanc_long2048x20000/: leblanc.pnt
experiment/pennant.tests/leblanc_long2048x30/: leblanc.pnt
experiment/pennant.tests/leblanc_long256x1000/: leblanc.pnt
experiment/pennant.tests/leblanc_long256x10000/: leblanc.pnt
experiment/pennant.tests/leblanc_long256x20000/: leblanc.pnt
experiment/pennant.tests/leblanc_long256x30/: leblanc.pnt
experiment/pennant.tests/leblanc_long2x10000/: leblanc.pnt
experiment/pennant.tests/leblanc_long2x20000/: leblanc.pnt
experiment/pennant.tests/leblanc_long2x30/: leblanc.pnt
experiment/pennant.tests/leblanc_long32x10000/: leblanc.pnt
experiment/pennant.tests/leblanc_long32x20000/: leblanc.pnt
experiment/pennant.tests/leblanc_long32x30/: leblanc.pnt
experiment/pennant.tests/leblanc_long4096x1000/: leblanc.pnt
experiment/pennant.tests/leblanc_long4096x10000/: leblanc.pnt
experiment/pennant.tests/leblanc_long4096x20000/: leblanc.pnt
experiment/pennant.tests/leblanc_long4096x30/: leblanc.pnt
experiment/pennant.tests/leblanc_long4x10000/: leblanc.pnt
experiment/pennant.tests/leblanc_long4x20000/: leblanc.pnt
experiment/pennant.tests/leblanc_long4x30/: leblanc.pnt
experiment/pennant.tests/leblanc_long512x10000/: leblanc.pnt
experiment/pennant.tests/leblanc_long512x20000/: leblanc.pnt
experiment/pennant.tests/leblanc_long512x30/: leblanc.pnt
experiment/pennant.tests/leblanc_long64x10000/: leblanc.pnt
experiment/pennant.tests/leblanc_long64x20000/: leblanc.pnt
experiment/pennant.tests/leblanc_long64x30/: leblanc.pnt
experiment/pennant.tests/leblanc_long8192x10000/: leblanc.pnt
experiment/pennant.tests/leblanc_long8192x20000/: leblanc.pnt
experiment/pennant.tests/leblanc_long8192x30/: leblanc.pnt
experiment/pennant.tests/leblanc_long8x10000/: leblanc.pnt
experiment/pennant.tests/leblanc_long8x20000/: leblanc.pnt
experiment/pennant.tests/leblanc_long8x30/: leblanc.pnt
experiment/perlmutter/: env.sh
experiment/sapling/: env.sh
src/: CMakeLists.txt  legion_resilience.cc  legion_resilience.h  legion_resilience.inl  resilience.cc  resilience.h
src/resilience/: future.cc  future.h  future.inl  launcher.cc  launcher.h  launcher.inl  mapper.cc  mapper.h  projection.cc  projection.h  resilience.cc  resilience.inl  resilience_c.cc  resilience_c.h  resilience_c_util.h  serializer.cc  serializer.h  serializer.inl  types.h
tests/: CMakeLists.txt  futures.cc  futures_2.cc  futures_multiple_checkpoints.cc  futures_repeat.cc  futures_repeat_2.cc  futures_repeat_3.cc  futures_repeat_4.cc  index_tasks.cc  index_tasks_2d.cc  index_tasks_3d.cc  partition_equal_1d.cc  partition_equal_1d_2.cc  partition_equal_1d_3.cc  partition_equal_2d.cc  partition_equal_3d.cc  partition_field.cc  partition_image.cc  partition_preimage.cc  region.cc  region_destroy.cc  runner.py  runner.sh
